@@ -92,7 +92,11 @@ p, li { white-space: pre-wrap; }
       <number>6</number>
      </property>
      <item row="1" column="2" >
-      <widget class="QLineEdit" name="passwordEdit" />
+      <widget class="QLineEdit" name="passwordEdit" >
+       <property name="echoMode" >
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
      </item>
      <item row="0" column="0" >
       <widget class="QLabel" name="label_4" >
